--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-This was the midterm project for an HTML/CSS design class at Kalamazoo Valley Community College. This site was written with just HTML and vanilla CSS,  no frameworks.
+This was the midterm project for an HTML/CSS design class at Kalamazoo Valley Community College. This site was written with just HTML and vanilla CSS,  no frameworks. Later, I came back and edited it to include responsiveness.
